test_case/rust-lang_rust/71360_616678707_2.rs
compile_fail,E0277
> let x = 7_u64;
> // error: `std::convert::From<u64>` is not implemented for `usize`
> let _ = usize::from(x);
> 